2011-02-17 0.2.9

  * Added posibility to add more lyrics sources or edit existing ones
  * Implemented stop after current track using shift + click on stop button
  * Added more options for Copy To patterns
    {al}  : artist in lower case
    {au}  : artist in upper case
    {a1}  : first letter of artist
    {aal} : album artist in lower case
    {aau} : album artist in upper case
    {aa1} : first letter of album artist
    {A}   : album artist if not empty or artist otherwise
    {Al}  : {A} in lower case
    {Au}  : {A} in upper case
    {A1}  : first letter of {A}
    {bl}  : album in lower case
    {bu}  : album in upper case
    {b1}  : first letter of album
    {cl}  : composer in lower case
    {cu}  : composer in upper case
    {c1}  : first letter of composer
    {gl}  : genre in lower case
    {gu}  : genre in upper case
    {g1}  : first letter of genre
  * Added Album Artist to Music Brainz tagger feature
  * Added combo boxes to the track editor
  * Added iPod support with covers and playlist
  * Added output audio device configuration option in preferences
  * Added partial mpris2 support
  * Added SoundMenu integration support
  * Added support for wma files extended attributes
  * Added the option to disable replay gain in preferences
  * Added the possibility to show the current track cover in a window
  * Fixed a bug in default podcast directory creation
  * Added usb mass storage devices support
  * Added support for trueaudio files
  * Added support for wavpack files
  * Added option to embed album cover to all album tracks
  * Playlist panel now allow to select multiple playlists
  * Added an option to dont follow symbolic lyncs while doing the scanning. ( Thanks symphom )
  * Added an option to dont search for embedded covers in audio files
  * Fixed bug not preserving the directory selected for podcasts, recordings or saving lyrics
  * Added Magnatune support
  * Added Jamendo support