@@ -1,3 +1,10 @@
+ 
+  
+  * Changed command line behaviour to append the tracks to the playlist and
+    play it if it was not already playing.
+  * Sound menu integration in Ubuntu 11.04 natty
+  * Added shortcuts configurable from preferences
+
 2011-02-17 0.2.9
 
   * Added posibility to add more lyrics sources or edit existing ones
